# ProgSnapToolkit

./: .gitignore  README.md  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements.txt  run_api.bat  test.py  test_anaytics.ipynb
.github/workflows/: gen_docs.yaml
requirements/: requirements-api.in  requirements-dev.in  requirements.in
sample_data_configs/: codebench2024.yaml  codeworkout_f19.yaml  codeworkout_s19.yaml  cs1eng_s24.yaml  edwards2019.yaml  edwards2021.yaml  falconcode.yaml
scripts/: generate_docs.py
src/analytics/: analytics_config.py  dataset_config.py  ps2_dataset.py
src/analytics/feature_importance/: importance.ipynb
src/analytics/metrics/: errors.py  score.py  time.py
src/analytics/preprocessors/: codebench.py  codeworkout.py  deidentify.ipynb  edwards.py
src/api/: config.py
src/converters/: codebench.ipynb  edwards.ipynb  edwards2019.ipynb  edwards2021.ipynb  falconcode.ipynb
src/database/: config.py  sql_context.py  sql_table_manager.py
src/database/codestate/: table_codestate_writer.py
src/database/reader/: csv_reader.py  ps2_reader.py  sql_reader.py
src/database/writer/: db_writer_factory.py
src/datasets/: codebench.py  codeworkout.py  cs1eng.py  edwards.py
src/datasets/codebench/: configs.py
src/datasets/codeworkout/: configs.py
src/examples/: clustering.ipynb  extract_features.ipynb
tests/: conftest.py
tests/analytics/: test_error_metrics.py
tests/database/: conftest.py  test_codestate_writers.py  test_event_validator.py  test_event_writer.py  test_sql_writer.py
(+61 files in other folders)
